--- a/07-rest-server/.vscode/settings.json
+++ b/07-rest-server/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#600A08",
-        "titleBar.activeBackground": "#860E0B",
-        "titleBar.activeForeground": "#FFFBFB"
+        "activityBar.background": "#033245",
+        "titleBar.activeBackground": "#044660",
+        "titleBar.activeForeground": "#F7FCFF"
     }
 }
